# marketing_agent

./: README.md  pyproject.toml
src/: main.py
src/adapters/: bs4_scraper_adapter.py  campaign_description_gen_adapter.py  creator_recommendation_adapter.py  database.py  open_ai_adapter.py  postgres_db_adapter.py  tavily_search_adapter.py  video_description_gen_adapter.py
src/application/services/: agent.py  llm.py  my_agent.py  tools.py
src/domain/enums/: campaign_basics.py  video_preferences.py
src/domain/models/: context_fetch_model.py  data_gen_model.py  db_model.py  input.py  node_status_model.py  state.py
src/ports/input/: db_port.py
src/ports/output/: campain_description_gen_port.py  creator_recommendation_port.py  llm_port.py  scraper_port.py  video_script_gen_port.py  web_search_port.py
src/tests/unit/: bs4_adapter_test.py  tavily_search_adapter_test.py
