[project]
name = "marketing-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "beautifulsoup4>=4.15.0",
    "colorlog>=6.10.1",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "grandalf>=0.8",
    "ipython>=9.14.1",
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "openai>=2.41.1",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "strawberry-graphql[fastapi]>=0.316.0",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
